Adding revisions and photos

--- a/index.html
+++ b/index.html
@@ -7,6 +7,41 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="content">
+      <figure>
+        <div class="fig"><img src="Kim-Claudia.png" alt="HP"></div>
+      </figure>
+      <figure>
+        <div class="fig"><img src="kpop_edit.jpeg" alt="Kpop"></div>
+      </figure>
+      <figure>
+        <div class="fig"><img src="Sense8.jpg" alt="TV"></div>
+      </figure>
+      <figure>
+        <div class="fig"><a href="othering.html"><img src="squid_game.jpeg" alt="SquidGame"></a></div>
+      </figure>
+      <figure>
+        <div class="fig"><a href="othering.html"><img src="mitski.jpeg" alt="Mitksi"></a></div>
+      </figure>
+      <figure>
+        <div class="fig"><a href="sexualization.html"><img src="misssaigon.jpeg" alt="MissS"></a></div>
+      </figure>
+      <figure>
+        <div class="fig"><a href="othering.html"><img src="doctorstrange.jpeg" alt="doctorstrange"></a></div>
+      </figure>
+      <figure>
+        <div class="fig"><a href="sexualization.html"><img src="annamay.jpg" alt="annamay"></a></div>
+      </figure>
+      <figure>
+        <div class="fig"><a href="sexualization.html"><img src="soldiers.jpeg" alt="soldiers"></a></div>
+      </figure>
+      <figure>
+        <div class="fig"><a href="othering.html"><img src="akira1-2000.jpeg" alt="akira1"></a></div>
+      </figure>
+      <figure>
+        <div class="fig"><a href="othering.html"><img src="ironfist.jpeg" alt="ironfist"></a></div>
+      </figure>
+    </div>
 
   </body>
 </html>
